old/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  annotations:
    linkerd.io/inject: enabled
