old/apps/kubeview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeview-images
  namespace: apps
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
    - host: kubeview.cluster.rebelinblue.com
      http:
        paths:
          - path: /img
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubeview
                port:
                  number: 80
          - path: /css
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubeview
                port:
                  number: 80
          - path: /js
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubeview
                port:
                  number: 80
  tls:
    - hosts:
        - kubeview.cluster.rebelinblue.com
      secretName: kubeview-tls
